# ros_cpp_py_basics

./: CMakeLists.txt  README.md  package.xml
launch/: nodes_diff_robots_ns.launch  one_tb3_env.launch  two_tb3_env.launch
matlab_script/: graf_diff_robot_controller.m
scripts/: diff_robot_controller.py  lidar_scan_listening.py  simple_motion_diff_robot.py  two_diff_robots_ns_service.py
src/: diff_robot_controller.cpp  lidar_scan_listening.cpp  simple_motion_diff_robot.cpp  two_diff_robots_ns_service.cpp
